2011-02-09 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: in ibis::bin::setBoundaries avoid casting bounds
	to floats

2011-02-08 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: change part::doCount to use column::getValuesArray
	instead of directly attempting to read the underlying data files
	* src/ibin.cpp: take into account of the total cost in
	bin::estimate, do nothing if the total cost is higher than
	scanning the base data

2011-01-28 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp, src/column.cpp: add statements in
	column::selectTypes to perform shallow copy when selecting all
	elements of the data values
	* tests/Makefile.am: add more files to be removed under the target
	clean

2011-01-27 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.h, src/fileManager.cpp: remove function
	ibis::fileManager::storage::unnamed
	* src/array_t.h, src/array_t.cpp: add constructor taking a raw
	pointer from the caller to avoid copying data

2011-01-25 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: add checks for nil pointer col

2011-01-06 John Wu <John dot Wu at ACM dot org>
        * doc/*.html: update html files to use RDFa tag for creator

2011-01-04 John Wu <John dot Wu at ACM dot org>
	* src/util.h:1353 use function floor to extract the integer
	portion from the log10 of incoming value instead of rounding with
	static_cast<int>, to correct a problem identified by Jinoh Kim
	* src/ibin.h, src/ibin.cpp: rename granule::loc0 to granule::locm,
	granule::loc1 to granule::locp, update printGranules to check for
	nil pointer of granule::loce

2010-12-22 John Wu <John dot Wu at ACM dot org>
	* src/resources.cpp:381 remove backslash infront of ` to address a
	complaint from PGI compiler
	* src/category.h:128 use the function estimateCost from the
	immediate base class instead of ibis::column
	* tests/Makefile.am: add statements to print a blank statement
	after the completion of check-labeling and check-join
